# gradio-keylock

./: README.md  pyproject.toml
demo/: pyproject.toml
gradio_keylock/: __init__.py  component.py
gradio_keylock/demo/: app.py
